<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@color/background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="4dp">

        <ImageButton
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:layout_marginEnd="@dimen/indent_sm"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/back_24"
            app:tint="@color/on_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/on_background"
            android:textSize="@dimen/text_size_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_item_height"
        android:layout_marginTop="@dimen/indent_lg"
        android:background="@color/background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/indent_md"
        android:paddingEnd="@dimen/indent_sx"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_theme"
            android:textColor="@color/on_background"
            android:textSize="@dimen/text_size_body" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:checked="true"
            android:switchMinWidth="56dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_item_height"
        android:background="@color/background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/indent_md"
        android:paddingEnd="@dimen/indent_sm">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_the_app"
            android:textColor="@color/on_background"
            android:textSize="@dimen/text_size_body" />

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/indent_sx"
            android:src="@drawable/share_24"
            app:tint="@color/outline"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_item_height"
        android:background="@color/background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/indent_md"
        android:paddingEnd="@dimen/indent_sm">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contact_support"
            android:textColor="@color/on_background"
            android:textSize="@dimen/text_size_body" />

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/indent_sx"
            android:src="@drawable/support_24"
            app:tint="@color/outline"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_item_height"
        android:background="@color/background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/indent_md"
        android:paddingEnd="@dimen/indent_sm">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            android:textColor="@color/on_background"
            android:textSize="@dimen/text_size_body" />

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/indent_sx"
            android:src="@drawable/chevron_right_24"
            app:tint="@color/outline"
            tools:ignore="ContentDescription" />

    </LinearLayout>

</LinearLayout>
