<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/indent_md"
        android:text="@string/app_name"
        android:textColor="@color/on_primary"
        android:textSize="@dimen/text_size_title" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/indent_md"
        android:layout_marginTop="@dimen/indent_lg"
        android:layout_weight="1"
        android:backgroundTint="@color/background"
        android:foreground="?attr/selectableItemBackground"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/on_background"
        android:textSize="@dimen/text_size_title"
        app:cornerRadius="@dimen/radius_md"
        app:icon="@drawable/search_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/indent_sx"
        app:iconTint="@color/on_background" />

    <Button
        android:id="@+id/media_library_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/indent_md"
        android:layout_marginTop="@dimen/indent_md"
        android:layout_weight="1"
        android:backgroundTint="@color/background"
        android:foreground="?attr/selectableItemBackground"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/media_library"
        android:textAllCaps="false"
        android:textColor="@color/on_background"
        android:textSize="@dimen/text_size_title"
        app:cornerRadius="@dimen/radius_md"
        app:icon="@drawable/media_library_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/indent_sx"
        app:iconTint="@color/on_background" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/indent_md"
        android:layout_marginTop="@dimen/indent_md"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:backgroundTint="@color/background"
        android:foreground="?attr/selectableItemBackground"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/on_background"
        android:textSize="@dimen/text_size_title"
        app:cornerRadius="@dimen/radius_md"
        app:icon="@drawable/settings_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/indent_sx"
        app:iconTint="@color/on_background" />

</LinearLayout>
